# petab_timecourse

./: .gitmodules  LICENSE  README.md  setup.cfg
doc/examples/: Cuadros.ipynb  cuadros_new.ipynb  simple_timecourse.ipynb  simple_timecourse_helpers.py  simple_timecourse_simulate.ipynb  simple_timecourse_simulate_new.ipynb
doc/examples/Cuadros_HealthPlace2020/: SBML_Cuadros_HealthPlace2020.xml  experimentalCondition_Cuadros_HealthPlace2020.tsv  measurementData_training_Cuadros_HealthPlace2020.tsv  observable_Cuadros2020.tsv  parameters_Cuadros_HealthPlace2020.tsv  petab_training_SBML_Cuadros_HealthPlace2020.yaml  simulation_df.tsv  timecourse.tsv  visualizationSpecifications_Cuadros_HealthPlace2020.tsv
doc/examples/Cuadros_HealthPlace2020/old/: measurementData_test_Cuadros_HealthPlace2020.tsv
doc/examples/Cuadros_HealthPlace2020/regimens/: epsilon.tsv
doc/examples/Cuadros_HealthPlace2020/regimens_fixed/: epsilon.tsv
doc/examples/amici_periods_vs_events/: _helpers.py  simulate_as_events.py  simulate_in_periods.py
doc/examples/amici_periods_vs_events/input/simple_timecourse/: conditions.tsv  model.xml  parameters.tsv  (+1 more)
doc/examples/input/simple_timecourse/: measurements.tsv  observables.tsv  petab.yaml
petab_timecourse/: C.py  __init__.py  amici.py  format.py  format_parameterwise.py  math.py  misc.py  petab.py  problem.py  pypesto.py  sbml.py  simulator.py  timecourse.py
tests/: fixture_fixed_timepoint_parameter_timecourse.py  test_fixed_timepoint_parameter_changes.py  test_fixed_timepoint_parameter_timecourse.py  test_optimize.py  test_simulate.py
