[metadata]
name = petab_timecourse
version = attr: petab_timecourse.version.__version__
description = Timecourses for PEtab problems
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/dilpath/petab_timecourse
project_urls =
    Issue Tracker = https://github.com/dilpath/petab_timecourse/issues

author = Dilan Pathirana

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering

python_requires = >=3.7
include_package_data = True
packages = find:

[build-system]
requires =
    wheel
    setuptools

[options]
install_requires =
    more-itertools
    pandas
    petab
    python-libsbml
    python-slugify

[options.extras_require]
examples =
    notebook
    amici
    petab
    pypesto
tests =
    pytest

[bdist_wheel]
universal = False  # Python 3
